--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@ const firebaseConfig = {
             const timeString = now.toLocaleTimeString([], { hour: '2-digit', minute:'2-digit' });
             
             // Update all platform timestamps
-            ['pc', 'ps5', 'xbox'].forEach(platform => {
+            ['ps5', 'xbox'].forEach(platform => {
                 const element = document.getElementById(`${platform}-updated-time`);
                 if (element) {
                     element.textContent = `Updated: ${timeString}`;
@@ -1510,6 +1510,8 @@ const firebaseConfig = {
                     <td class="py-3 px-4">
                         ${fight.method === 'KO' ? 
                           '<span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-red-900/30 text-red-300 border border-red-500"><i class="fas fa-bolt mr-1"></i> KO/TKO</span>' : 
+                          fight.method === 'Submission' ? 
+                          '<span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-red-900/30 text-red-300 border border-red-500"><i class="fas fa-bolt mr-1"></i> Submission</span>' :
                           fight.method === 'Decision' ? 
                           '<span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-blue-900/30 text-blue-300 border border-blue-500"><i class="fas fa-gavel mr-1"></i> Decision</span>' : 
                           '<span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-gray-700 text-gray-300 border border-gray-500"><i class="fas fa-handshake mr-1"></i> Draw</span>'}
